--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,4 @@
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap/dist/css/bootstrap";
 @import "node_modules/animate.css/animate";
 @import "node_modules/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch";
 @import "node_modules/datatables/media/css/jquery.dataTables";
@@ -13,7 +13,6 @@
 @import "node_modules/dropzone/dist/dropzone";
 @import "node_modules/cropperjs/dist/cropper";
 @import "fonts";
-@import "mdb.min";
 @import "sd_voyager";
 
 /********** LOGIN STYLES ***********/
