--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,19 +1,20 @@
-@import "~bootstrap/dist/css/bootstrap";
-@import "node_modules/animate.css/animate";
-@import "node_modules/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch";
-@import "node_modules/datatables/media/css/jquery.dataTables";
-@import "node_modules/datatables-bootstrap3-plugin/media/css/datatables-bootstrap3";
-@import "node_modules/select2/dist/css/select2";
-@import "node_modules/toastr/build/toastr";
-@import "node_modules/perfect-scrollbar/dist/css/perfect-scrollbar";
-@import "node_modules/bootstrap-toggle/css/bootstrap-toggle";
-@import "node_modules/icheck/skins/flat/flat";
-@import "node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker";
-@import "node_modules/simplemde/dist/simplemde.min";
-@import "node_modules/dropzone/dist/dropzone";
-@import "node_modules/cropperjs/dist/cropper";
+@import "~bootstrap/scss/bootstrap";
+@import "~animate.css/animate";
+@import "~bootstrap-switch/dist/css/bootstrap3/bootstrap-switch";
+//@import "bootstrap-switch";
+@import "~datatables/media/css/jquery.dataTables";
+@import "~datatables.net-bs4/css/dataTables.bootstrap4";
+@import "~select2/dist/css/select2";
+@import "~toastr/build/toastr";
+@import "~perfect-scrollbar/dist/css/perfect-scrollbar";
+@import "~bootstrap-toggle/css/bootstrap-toggle";
+@import "~icheck/skins/flat/flat";
+@import "~bootstrap-datepicker/dist/css/bootstrap-datepicker";
+@import "~simplemde/dist/simplemde.min";
+@import "~dropzone/dist/dropzone";
+@import "~cropperjs/dist/cropper";
 @import "fonts";
-@import "sd_voyager";
+@import "mdb/mdb.min";
 
 /********** LOGIN STYLES ***********/
 
@@ -25,14 +26,12 @@ body.login {
   -moz-background-size: cover;
   -ms-background-size: cover;
   -webkit-background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
+  background: no-repeat center center;
   overflow: hidden;
 
   .login-sidebar {
     min-height: 100vh;
     position: relative;
-    border-radius: 5px;
     z-index: 2;
     padding: 0;
     justify-content: center;
@@ -1815,7 +1814,7 @@ table.dataTable.no-footer {
   padding: 10px;
   border: 1px solid #DDD;
 }
-
+/*
 .breadcrumb {
   margin-bottom: 0;
 }
@@ -1826,7 +1825,7 @@ table.dataTable.no-footer {
   position: relative;
   top: 1px;
   margin-right: 3px;
-}
+}*/
 
 .message-list {
   margin: 0;
@@ -10212,7 +10211,7 @@ html, body {
 .voyager .navbar.navbar-default .navbar-header .navbar-right-expand-toggle {
   color: #353d47;
 }
-
+/*
 .voyager .navbar .navbar-breadcrumb li,
 .voyager .navbar.navbar-default .navbar-breadcrumb li {
   color: #353d47;
@@ -10227,6 +10226,7 @@ html, body {
 .voyager .navbar.navbar-default .navbar-nav > li {
   border-left: 1px solid #F9F9F9;
 }
+*/
 
 .voyager .navbar .navbar-nav > li.profile,
 .voyager .navbar.navbar-default .navbar-nav > li.provile {
@@ -10316,7 +10316,7 @@ html, body {
 .voyager .navbar.navbar-inverse .navbar-header .navbar-right-expand-toggle {
   color: #FFF;
 }
-
+/*
 .voyager .navbar.navbar-inverse .navbar-breadcrumb li {
   color: #FFF;
 }
@@ -10324,7 +10324,7 @@ html, body {
 .voyager .navbar.navbar-inverse .navbar-breadcrumb li a {
   color: #FFF;
 }
-
+*/
 .voyager .navbar.navbar-inverse .navbar-nav > li {
   border-left: 1px solid #363c46;
 }
@@ -17163,3 +17163,7 @@ div.cropper-container img {
 }
 
 /********** END SimpleMDE Style **********/
+
+
+
+@import "sd_voyager";
