--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10546,7 +10546,7 @@ html, body {
 }
 
 .voyager .card {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);*/
   border: 0 solid #E4E4E4;
 }
 
