--- a/publishable/assets/css/app.css
+++ b/publishable/assets/css/app.css
@@ -2708,5 +2708,41 @@ media {
   padding-top: 8px !important;
 }
 
+.pagination .page-item .page-link:focus {
+  background-color: #4285f4;
+  color: white;
+}
+
+#editor {
+  margin: 0;
+  height: 100%;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #333;
+}
+
+#editor textarea, #editor #editor div {
+  display: inline-block;
+  width: 49%;
+  height: 100%;
+  vertical-align: top;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+
+#editor textarea {
+  border: none;
+  border-right: 1px solid #ccc;
+  resize: none;
+  outline: none;
+  background-color: #f6f6f6;
+  font-size: 14px;
+  font-family: 'Monaco', courier, monospace;
+  padding: 20px;
+}
+
+#editor code {
+  color: #f66;
+}
+
 /********** END NESTABLE CSS **********/
 /**/
