--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2613,6 +2613,29 @@ media {
 }
 
 
+#voyager-loader {
+  background: #F9F9F9;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 99;
+}
+
+#voyager-loader img {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-right: -50px;
+  -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
 /********** END NESTABLE CSS **********/
 
 
